kubernetes/nginx-deploy-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-portal
  labels:
    app: app-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-portal
  template:
    metadata:
      labels:
        app: app-portal
    spec:
      containers:
      - name: busybox
        image: registry.k8s.io/busybox
        command: [ "sh", "-c"]
        args:
        - while true; do
            echo -en '\n';
            echo "${NODE_NAME}" "`date +"%Y-%m-%d %H:%M:%S"`"   >> /data/log.txt;
            sleep 1;
          done;
        volumeMounts:
        - mountPath: /var/www/html
          name: data
      - image: nginx:1.7.9
        name: nginx
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: app-data-rwx
      - name: nginx-config-volume
        configMap:
          name: nginx-config
