kubernetes/basics-kicker.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: epicshitio-ssp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssp-webportal-deployment
  namespace: epicshitio-ssp
spec:
  selector:
    matchLabels:
      app: ssp-webportal
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: ssp-webportal
    spec:
      containers:
      - name: ssp-webportal
        image: registry.gitlab.com/fabianborn/docker-images/kicker-api:v0.2e-2022.10.3113
        ports:
        - containerPort: 8084
        volumeMounts:
          - name: config
            mountPath: /app/config
        livenessProbe:           # To check the health of the Pod
          httpGet:
            path: /health
            port: 8084
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:          # To check if the Pod is ready to serve traffic or not
          httpGet:
            path: /readiness
            port: 8084
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1    
      volumes:
        - name: config
          configMap:
            name: epicshitio-ssp-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ssp-webportal-ingress
spec:
  rules:
  - host: ssp.starscream.wdf.epicshit.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssp-portal-svc
            port:
              number: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ssp-portal-svc
spec:
  ports:
  - name: http
    port: 8084
